# swagger/perfume.swagger.yaml
@@ -2,7 +2,7 @@ paths:
   /{PerfumeID}/getPerfumes:
     get:
       tags:
-        - GetPerfume
+        - Perfume
       summary: 향수 상세 정보 조회 로직
       parameters:
         - name: PerfumeID
@@ -67,10 +67,10 @@ paths:
               message:
                 type: string
                 example: 서버 에러, 관리자에게 문의 바랍니다.
-  /{PerfumeID}/GetCategories:
+  /{PerfumeID}/getCategories:
     get:
       tags:
-        - getCategories
+        - Perfume
       summary: 향수 카테고리 정보 조회 로직
       parameters:
         - name: PerfumeID
@@ -99,6 +99,96 @@ paths:
               data:
                 type: array
                 example: { "category_contentsData": [{ "keyword": "우디" }] }
+
+        "400":
+          description: 잘못된 요청
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 400
+              isSuccess:
+                type: boolean
+                example: false
+              code:
+                type: integer
+                example: COMMON001
+              message:
+                type: string
+                example: 잘못된 요청입니다
+
+        "500":
+          description: 서버 에러
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 500
+              isSuccess:
+                type: boolean
+                example: false
+              code:
+                type: integer
+                example: COMMON000
+              message:
+                type: string
+                example: 서버 에러, 관리자에게 문의 바랍니다.
+  /{PerfumeID}/write/{UserID}:
+    post:
+      tags:
+        - Perfume
+      summary: 향수 코멘트 작성
+      parameters:
+        - name: PerfumeID
+          in: path
+          required: true
+          schema:
+            type: integer
+          description: 작성하려는 향수의 번호
+        - name: UserID
+          in: path
+          required: true
+          schema:
+            type: integer
+          description: 작성하려는 사용자의 ID
+        - name: Comment
+          in: body
+          required: true
+          schema:
+            properties:
+              Content:
+                type: string
+                description: 향수 코멘트 내용
+                example: perfume content
+        - name: Authorization
+          in: header
+          required: true
+          schema:
+            type: string
+          description: Bearer token 작성하기
+      responses:
+        "200":
+          description: 향수 코멘트 작성 성공!
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 200
+              isSuccess:
+                type: boolean
+                example: true
+              code:
+                type: integer
+                example: 2000
+              message:
+                type: string
+                example: "success!"
+              data:
+                type: object
+                example: { "UserID": 1, "PerfumeID": 1, "Content": "perfume content" }
 
         "400":
           description: 잘못된 요청
